fix-bug: parâmetro max-width adicionado na section de indicativos de contraste

--- a/css/ressonancia.css
+++ b/css/ressonancia.css
@@ -76,6 +76,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    max-width: 100vw;
 }
 
 .bloco-indicativo {
